--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 title: Welcome to Jankin-Bai's homepage!
 description: In me the tiger sniffs the rose.
